Implement photo endpoints
